[package]
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
name = "benchmarks"
publish = false
version = "0.1.0"
workspace = ".."

[dependencies]

[dependencies.corona]
path = ".."

[dependencies.tokio]
features = ["async-await-preview"]
version = "0.1.15"

[dev-dependencies]
futures-cpupool = "~0.1"
lazy_static = "~1"
net2 = "~0.2"
num_cpus = "~1"
tokio = "~0.1"
tokio-io-pool = "~0.1"

[[bench]]
name = "compare_methods"
# harness = false 

[dev-dependencies.corona]
path = ".."
